@@ -1,3 +1,3 @@
 Andrew Uselton <uselton2@llnl.gov>
-Jim Galick <garlick1@llnl.gov>
+Jim Garlick <garlick1@llnl.gov>
 Al Chu <chu11@llnl.gov>
