@@ -1,0 +1,25 @@
+.TH PowerMan 8 "Release 2.3" "LLNL" "PowerMan"
+.SH NAME
+plmpower \- control Insteon/X10 devices via SmartLabs PLM 2412S
+.SH SYNOPSIS
+.B plmpower
+.I "--device serial-port"
+.LP
+.SH DESCRIPTION
+.B plmpower
+is a helper program for
+.B powerman
+which enables communication with Insteon/X10 devices via SmartLabs PLM 2412S.
+It is run interactively by the powerman daemon.
+.SH OPTIONS
+.TP
+.I "-d, --device serial-port"
+Specify the path to the special file connected to the PLM's serial port.
+.SH "FILES"
+/usr/sbin/plmpower
+.br
+/usr/sbin/powermand
+.br
+/etc/powerman/powerman.conf
+.SH "SEE ALSO"
+powerman(1) powerman.conf(5) powermand(8)
