@@ -1,4 +1,4 @@
-.TH powerman-devices 1 "Release 1.0" "LLNL" "powerman-devices"
+.TH powerman-devices 7 "Release 2.3" "LLNL" "powerman-devices"
 .SH NAME
 PowerMan Device Configuration Notes
 .SH DESCRIPTION
