@@ -1,4 +1,4 @@
-.TH POWERMAN.CONF 1 "Release 1.0" "LLNL" "POWERMAN.CONF"
+.TH POWERMAN.CONF 5 "Release 2.3" "LLNL" "POWERMAN.CONF"
 
 .SH NAME
 powerman.conf \- configuration file for PowerMan
