@@ -1,4 +1,4 @@
-.TH POWERMAN.DEV 1 "Release 1.0" "LLNL" "POWERMAN.DEV"
+.TH POWERMAN.DEV 5 "Release 2.3" "LLNL" "POWERMAN.DEV"
 
 .SH NAME
 powerman.dev \- PowerMan device specification files
